@@ -275,7 +275,7 @@
          throw OpenError, "Unable to open $file"$;
        if ((-1 == fputs (s, fp))
            or (-1 == fclose (fp)))
-         throw WriteError, "Error writing to $file";
+         throw WriteError, "Error writing to $file"$;
     }
 #v-
 \notes
